--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <a target="_blank" href="https://www.instagram.com/rohittbhusal"><i class="fab fa-instagram"></i></a>
           <a target="_blank" href="https://www.linkedin.com/in/rohittbhusal"><i class="fab fa-linkedin"></i></a>
         </div>
-        <a href="rohitBhusalCV.pdf" download class="btn">Download CV</a>
+        <a href="Prarup_CV.pdf" download class="btn">Download CV</a>
       </div>
       <div class="contact-right-col">
         <form name="submit-to-google-sheet">
