Changes in links

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
     <div class="row">
       <div class="contact-left-col">
         <h1 class="sub-title">Contact Me</h1>
-        <p><i class="fas fa-paper-plane"></i> rohittbhusal@gmail.com</p>
-        <p><i class="fas fa-phone"></i> (+977) 9847027176</p>
+        <p><i class="fas fa-paper-plane"></i> prarupregmi@gmail.com</p>
+        <p><i class="fas fa-phone"></i> (+977) 9860199398</p>
         <div class="social-icons">
-          <a target="_blank" href="https://www.facebook.com/rohittbhusal"><i class="fab fa-facebook"></i></a>
-          <a target="_blank" href="https://www.instagram.com/rohittbhusal"><i class="fab fa-instagram"></i></a>
-          <a target="_blank" href="https://www.linkedin.com/in/rohittbhusal"><i class="fab fa-linkedin"></i></a>
+          <a target="_blank" href="https://www.facebook.com/Prarup"><i class="fab fa-facebook"></i></a>
+          <a target="_blank" href="https://www.instagram.com/_prarup/"><i class="fab fa-instagram"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/prarup/"><i class="fab fa-linkedin"></i></a>
         </div>
         <a href="Prarup_CV.pdf" download class="btn">Download CV</a>
       </div>
@@ -160,7 +160,7 @@
     </div>
   </div>
   <div class="copyright">
-    <p>Copyright &copy; Rohit</p>
+    <p>Copyright &copy; Prarup</p>
   </div>
 </div>
 
