change game links

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <img src="theGalaxyShooter.png" alt="The Galaxy Shooter">
         <div class="layer">
           <h3>The Galaxy Shooter</h3>
-          <p>Get ready to embark on an adventure destroying enemy ships in the deep, dark, and cold space.,<br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
-          <a target="_blank" href="https://rohittbhusal.centralindia.cloudapp.azure.com/TSW/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+          <p>Get ready to embark on an adventure destroying enemy ships in the deep, dark, and cold space<br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
+          <a target="_blank" href="https://prarup.itch.io/galaxy-shooter"><i class="fa fa-external-link" aria-hidden="true"></i></a>
           <p>2D Game</p>
         </div>
       </div>
@@ -106,7 +106,7 @@
         <img src="theEscape.png" alt="The Dungeon Escape">
         <div class="layer">
           <h3>The Dungeon Escape</h3>
-          <p>Are you ready adventurer? Face the Monsters, Spiders, and Zombies in this ancient Dungeon<br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
+          <p>Are you ready adventurer? Face monsters and critters in this ancient Dungeon<br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
           <a target="_blank" href="https://rohittbhusal.centralindia.cloudapp.azure.com/TDE/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
           <p>2D Game</p>
         </div>
@@ -115,7 +115,7 @@
         <img src="theGreatFleece.png" alt="The Great Fleece">
         <div class="layer">
           <h3>The Great Fleece</h3>
-          <p>Play as Devin, the heist master. Dodge guards and security cams; find a way to get to the great hall where the real treasure is. Are you cunning enough? <br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
+          <p>Play as Devin, the heist master. Find a way to get to the great hall...where the real treasure is <br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
           <a target="_blank" href="https://rohittbhusal.centralindia.cloudapp.azure.com/TGF/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
           <p>3D Game</p>
         </div>
@@ -124,7 +124,7 @@
         <img src="theGreatHouse.png" alt="The Great House">
         <div class="layer">
           <h3>The Great House Tour</h3>
-          <p>Enter My Friend's House in 3D, a photogramettry project.<br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
+          <p>Enter My Friend's House in 3D, a photogrametry project.<br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
           <a target="_blank" href="https://rohittbhusal.centralindia.cloudapp.azure.com/TGH/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
           <p>3D House Tour</span></p>
         </div>
