Great fleece back-end changes

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <img src="theGreatFleece.png" alt="The Great Fleece">
         <div class="layer">
           <h3>The Great Fleece</h3>
-          <p>Play as Devin, the heist master. Find a way to get to the great hall...where the real treasure is <br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
-          <a target="_blank" href="https://rohittbhusal.centralindia.cloudapp.azure.com/TGF/"><i class="fa fa-external-link" aria-hidden="true"></i></a>
+          <p>Play as Darren, the heist master. Find a way to get to the great hall...where the real treasure is <br><br> <p style="color: red; font-weight: bold;">!!If server is not active, contact host!!</p></p>
+          <a target="_blank" href="https://prarup.itch.io/great-fleece"><i class="fa fa-external-link" aria-hidden="true"></i></a>
           <p>3D Game</p>
         </div>
       </div>
