--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="about-col-2">
         <h1 class="sub-title">About Me</h1>
-        <p>My educational background qualifies me as an environmental scientist. However, my actual calling is programming, and I am an avid researcher in satellite imaging technologies, photogrammetry, and the exciting field of AR/VR. I am passionate about software development and solving problems through environment modeling. My diversified skills and hands-on experience allow me to design innovative and complete solutions using various software and hardware technologies.</p>
+        <p>My educational background qualifies me as an environmental scientist. However, my actual calling is what I like to call 'creative programming'. I am an avid researcher and believe that in today's world creative expression and problem solving can be carried out through programming. I have delved in researching problems and finding solutions using satellite images (particularly Land-Use changes); preserving and showcasing art and culture through photogrammetry and worked in forming Digital-Twin products closely related to AR/VR technologies, for multi-scale operations. I am passionate about software development and solving problems through research and brainstorming. My diversified skills and hands-on experience allow me to design innovative and complete solutions using various software and hardware technologies and an outside-the-box thinking approach.</p>
         <div class="tab-titles">
           <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
           <p class="tab-links" onclick="opentab('experience')">Experience</p>
